fixed and blurred header

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -7,7 +7,8 @@ main {
     max-width: 750px;
     min-height: 82vh;
     margin: 0 auto;
-
+    margin-top: 85px;
+    
     // .brief {
     //     font-size: 1.2em;
     //     color: $text-light-color;
