--- a/sass/post.scss
+++ b/sass/post.scss
@@ -7,6 +7,7 @@ main {
     margin: 0 auto;
     max-width: 750px;
     margin-bottom: 50px;
+    margin-top: 85px;
 }
 
 article {
